src/objects/NCP_EmergencySupport_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>NCP_Contact_Label__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCP_Contact_email_telephone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact email telephone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCP_Country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCP_Country_code__c</fullName>
        <description>Recognised country code. This must be the same as the country code used on the user record (eg., Address.countryCode or CountryCode). Maximum two alphabetical characters.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Make sure the country code corresponds to country codes used on the user records.</inlineHelpText>
        <label>Country code</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCP_IsEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NCP_IsEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCP_IsPhone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NCP_IsPhone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCP_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Emergency Support</label>
    <listViews>
        <fullName>List_of_Countries</fullName>
        <columns>NCP_Country__c</columns>
        <columns>NCP_Type__c</columns>
        <columns>NCP_Contact_Label__c</columns>
        <columns>NCP_Contact_email_telephone__c</columns>
        <filterScope>Everything</filterScope>
        <label>List of Countries</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>